# homework_oop

./: .coveragerc  README.md  coverage_report.txt  pyproject.toml
src/: main.py
tests/: test_main.py
