[project]
name = "homework_oop"
version = "0.1.0"
description = "Домашнее задание по ООП"
authors = [
    {name = "annak", email = "annakuksofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.0.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
